--- a/image-tracking.html
+++ b/image-tracking.html
@@ -34,7 +34,8 @@
         cursor="fuse: false; rayOrigin: mouse;"
       >
         <a-entity
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        id="T-rex"
+          gltf-model="dragon2.gtlf"
           scale="5 5 5"
           position="50 150 0"
           class="clickable"
