--- a/image-tracking.html
+++ b/image-tracking.html
@@ -35,7 +35,7 @@
       >
         <a-entity
           id="t-rex"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+          gltf-model="/dragon3.gltf"
           scale="5 5 5"
           position="50 150 0"
           class="clickable"
