--- a/image-tracking.html
+++ b/image-tracking.html
@@ -35,7 +35,7 @@
       >
         <a-entity
           id="t-rex"
-          gltf-model="/dragon3.gltf"
+          gltf-model="https://cdn.glitch.global/3925ece8-2a3f-442d-bcea-b404cfff6f2c/dragon3.gltf?v=1644778453003"
           scale="5 5 5"
           position="50 150 0"
           class="clickable"
